ps-datacloud/main/default/objects/ssot__AllergyIntolerance__dlm/fields/Allergy_Name__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Name__c</fullName>
    <label>Allergy Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Allergy Name</labelOverride>
        <masterLabel>Allergy Name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>