ps-datacloud/main/default/objects/ssot__AllergyIntolerance__dlm/fields/rel_1773143604757_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1773143604757_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_AllergyIntolerance_Individual_I_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ssot_AllergyIntolerance_Individual_I_rel</relationshipLabel>
    <relationshipName>rel_1773143604757_end</relationshipName>
    <type>Lookup</type>
</CustomField>