ps-datacloud/main/default/objects/ssot__AllergyIntolerance__dlm/fields/SystemModStamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModStamp__c</fullName>
    <label>SystemModStamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>SystemModStamp</labelOverride>
        <masterLabel>SystemModStamp</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>